<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:paddingTop="10dp"
    tools:context=".ui.main.home.HomeFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_app"
        android:src="@drawable/logo_app_reduce_whitespace"
        app:layout_constraintBottom_toTopOf="@id/tv_welcome_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_to_afeed"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_sign_in_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_sign_in_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in_main"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_main" />

    <Button
        android:id="@+id/btn_elevated_sign_now_button"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="20dp"
        android:text="@string/sign_now"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        app:icon="@drawable/ic_button"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in_message" />

    <TextView
        android:id="@+id/tv_our_features"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/our_features"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_elevated_sign_now_button" />

    <ImageButton
        android:id="@+id/btn_a_feeding"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/a_feeding_feature"
        android:elevation="2dp"
        android:src="@drawable/fish"
        app:layout_constraintEnd_toStartOf="@+id/btn_customize_iot"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_our_features" />

    <ImageButton
        android:id="@+id/btn_ph_monitoring"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/ph_monitoring_feature"
        android:elevation="2dp"
        android:src="@drawable/hydrogen"
        app:layout_constraintEnd_toStartOf="@+id/btn_temperature_monitoring"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_customize_iot"
        app:layout_constraintTop_toTopOf="@+id/btn_a_feeding" />

    <ImageButton
        android:id="@+id/btn_customize_iot"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/customize_iot_feature"
        android:elevation="2dp"
        android:src="@drawable/settings_fill"
        app:layout_constraintEnd_toStartOf="@+id/btn_ph_monitoring"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_a_feeding"
        app:layout_constraintTop_toTopOf="@+id/btn_a_feeding" />

    <ImageButton
        android:id="@+id/btn_temperature_monitoring"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/temperature_monitoring_feature"
        android:elevation="2dp"
        android:src="@drawable/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_ph_monitoring"
        app:layout_constraintTop_toTopOf="@+id/btn_a_feeding" />

    <TextView
        android:id="@+id/tv_a_feeding_feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/a_feeding"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_a_feeding"
        app:layout_constraintStart_toStartOf="@+id/btn_a_feeding"
        app:layout_constraintTop_toBottomOf="@+id/btn_a_feeding" />

    <TextView
        android:id="@+id/tv_customize_iot_feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/customize_iot"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_customize_iot"
        app:layout_constraintStart_toStartOf="@+id/btn_customize_iot"
        app:layout_constraintTop_toBottomOf="@+id/btn_customize_iot" />

    <TextView
        android:id="@+id/tv_ph_monitoring_feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/ph_monitoring"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_ph_monitoring"
        app:layout_constraintStart_toStartOf="@+id/btn_ph_monitoring"
        app:layout_constraintTop_toBottomOf="@+id/btn_ph_monitoring" />

    <TextView
        android:id="@+id/tv_temperature_monitoring_feature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/temperature_monitoring"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/btn_temperature_monitoring"
        app:layout_constraintStart_toStartOf="@+id/btn_temperature_monitoring"
        app:layout_constraintTop_toBottomOf="@+id/btn_temperature_monitoring" />

    <TextView
        android:id="@+id/tv_article"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/article"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_a_feeding_feature" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_article"
        tools:listitem="@layout/item_article" />


</androidx.constraintlayout.widget.ConstraintLayout>