<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".ui.profile.ProfileActivity">


    <TextView
        android:id="@+id/profile_picture_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/profile_picture"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/user_s_profile_picture"
            android:padding="16dp"
            android:src="@drawable/ic_user_fill" />

        <TextView
            android:id="@+id/tv_profile_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:drawablePadding="4dp"
            android:padding="8dp"
            android:text="@string/profile_edit"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/baseline_edit_24" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_profile_username_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/username"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_username_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_profile_save"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_profile_username"
        tools:ignore="DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>