<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/access_denied"
        android:src="@drawable/confirmed_procces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_success_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:text="@string/access_denied" />

    <TextView
        android:id="@+id/textView_success_message_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:textSize="14sp"
        android:fontFamily="@font/inter_semibold"
        android:maxLines="3"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textView_success_message_title"
        app:layout_constraintStart_toStartOf="@+id/textView_success_message_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_success_message_title"
        tools:text="@string/you_need_to_sign_in_first_or_sign_up_and_make_new_account" />


    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="150dp"
        android:layout_marginTop="10dp"
        android:layout_height="53dp"
        android:background="@drawable/bg_on_container_rectangle"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@+id/textView_success_message_description"
        app:layout_constraintTop_toBottomOf="@+id/textView_success_message_description" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_on_container_rectangle"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/textView_success_message_description"
        app:layout_constraintTop_toBottomOf="@+id/textView_success_message_description" />


    <Button
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_on_container_rectangle"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />
</androidx.constraintlayout.widget.ConstraintLayout>